Fixed z-index issue for dropdown menu

--- a/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
+++ b/wp-content/themes/ualbany/resources/assets/styles/common/_variables.scss
@@ -63,4 +63,4 @@ $spacing-large:         20px;
 $spacing-extra-large:   40px;
 
 // z-index
-$z-index-dropdown-menu: 9999;
+$z-index-banner: 10;
